# KiChad

./: .gitignore  AGENTS.md  CMakePresets.json  KICHAD.md  README.md
.github/workflows/: linux-appimage.yml
api/proto/board/: board.proto  board_commands.proto  board_types.proto
api/proto/common/commands/: editor_commands.proto  project_commands.proto
api/proto/common/types/: base_types.proto  project_settings.proto
common/: netclass.cpp  single_top.cpp  wildcards_and_files_ext.cpp
common/api/: api_handler_common.cpp  api_handler_editor.cpp  api_utils.cpp
common/settings/: common_settings.cpp  kicad_settings.cpp
docs/: kichad-codex-architecture.md  kichad-design-script.md  production-status.md
eeschema/: sch_base_frame.cpp  sch_edit_frame.cpp  sch_group.cpp  sch_group.h  schematic.keywords
eeschema/erc/: erc_report.cpp
eeschema/sch_io/kicad_sexpr/: sch_io_kicad_sexpr_parser.cpp  sch_io_kicad_sexpr_parser.h
include/: wildcards_and_files_ext.h
include/api/: api_handler_common.h
include/settings/: kicad_settings.h
include/tool/: tools_holder.h
kicad/: CMakeLists.txt  kicad.cpp  kicad_manager_frame.cpp  kicad_manager_frame.h  menubar.cpp  project_tree.cpp  project_tree_item.cpp  project_tree_pane.cpp  tree_file_type.h
kicad/codex/: board_ps_artifact_validator.cpp  board_ps_artifact_validator.h  board_render_artifact_validator.cpp  board_render_artifact_validator.h  codex_agent_policy.cpp  codex_agent_policy.h  codex_app_server_client.cpp  codex_app_server_client.h  codex_panel.cpp  codex_panel.h  codex_paths.cpp  codex_paths.h  codex_protocol_log.cpp  codex_protocol_log.h  codex_thread_store.cpp  codex_thread_store.h  codex_tool_design.cpp  codex_tool_fabricate.cpp  codex_tool_inspect.cpp  codex_tool_internal.h  codex_tool_pcb.cpp  codex_tool_project.cpp  codex_tool_registry.cpp  codex_tool_registry.h  codex_tool_support.cpp  codex_tool_verify.cpp  codex_user_input_dialog.cpp  codex_user_input_dialog.h  design_release_writer.cpp  design_release_writer.h  design_script_assembly_compiler.cpp  design_script_assembly_compiler.h  design_script_board_asset_compiler.cpp  design_script_board_asset_compiler.h  design_script_board_compiler.cpp  design_script_board_compiler.h  design_script_board_graphic_compiler.cpp  design_script_board_graphic_compiler.h  design_script_board_graphic_proto_generator.cpp  design_script_board_graphic_proto_generator.h  (+170 more)
kicad/tools/: kicad_manager_actions.cpp  kicad_manager_actions.h  kicad_manager_control.cpp  kicad_manager_control.h
libs/kinng/include/: kinng.h
libs/kinng/src/: kinng.cpp
pcbnew/: footprint.cpp  footprint.h  pad.cpp  pcb_base_frame.cpp  pcb_edit_frame.cpp  pcb_edit_frame.h  pcb_shape.cpp  pcb_table.cpp  pcb_table.h  pcb_tablecell.cpp  pcb_tablecell.h  pcb_textbox.cpp  pcb_track.cpp  zone.cpp
pcbnew/api/: api_handler_pcb.cpp  api_handler_pcb.h  api_pcb_utils.cpp
pcbnew/board_stackup_manager/: board_stackup.cpp
pcbnew/dialogs/: dialog_exchange_footprints.cpp
pcbnew/pcb_io/kicad_sexpr/: pcb_io_kicad_sexpr.cpp  pcb_io_kicad_sexpr_parser.cpp
pcbnew/widgets/: appearance_controls.cpp
qa/data/config/10.0/: 3d_viewer.json  kicad.json
qa/data/eeschema/: groups_load_save.kicad_sch
qa/data/kichad/fabrication_clean/: fabrication_clean.kicad_kds  fabrication_clean.kicad_pcb  fabrication_clean.kicad_prl  fabrication_clean.kicad_pro  fabrication_clean.kicad_sch
qa/data/kichad/fabrication_component/: fabrication_component.kicad_kds  fabrication_component.kicad_pcb  fabrication_component.kicad_pro
qa/data/kichad/kds_live_apply/: Device.kicad_sym  live_apply.kicad_kds  live_apply.kicad_pcb  live_apply.kicad_pro  live_apply.kicad_sch
qa/data/kichad/reference_stepper_controller/: blank.kicad_pcb  blank.kicad_pro  blank.kicad_sch  reference_stepper_controller.kicad_kds
qa/tests/common/: CMakeLists.txt  test_board_ps_artifact_validator.cpp  test_board_render_artifact_validator.cpp  test_codex_agent_policy.cpp  test_codex_app_server_client.cpp  test_codex_thread_store.cpp  test_codex_tool_fabricate.cpp  test_codex_tool_registry.cpp  test_design_script_compiler.cpp  test_design_script_footprint_authoring.cpp  test_design_script_pcb_planner.cpp  test_design_script_pcb_reconciler.cpp  test_design_script_schematic_planner.cpp  test_design_script_schematic_reconciler.cpp  test_design_script_symbol_fields.cpp  test_design_script_symbol_graphics.cpp  test_design_script_symbol_library_generator.cpp  test_design_script_symbol_metadata.cpp  test_design_script_symbol_resolver.cpp  test_design_script_symbol_text.cpp  test_fabrication_artifact_validator.cpp  test_kds_editor_text.cpp  test_kicad_ipc_client.cpp  test_legacy_bom_artifact_validator.cpp  test_lossless_sexpr_document.cpp  test_managed_footprint_library_io.cpp  test_managed_symbol_library_io.cpp  test_mechanical_artifact_validator.cpp  test_netclass_serialization.cpp  test_schematic_bom_artifact_validator.cpp  test_schematic_dxf_artifact_validator.cpp  test_schematic_pdf_artifact_validator.cpp  test_schematic_ps_artifact_validator.cpp  test_schematic_svg_artifact_validator.cpp  test_stepz_artifact_validator.cpp  test_three_d_pdf_artifact_validator.cpp  test_u3d_artifact_validator.cpp
qa/tests/eeschema/: test_sch_group.cpp
qa/tests/eeschema/erc/: test_erc_power_pin_marker_location.cpp
qa/tests/libs/kinng/: test_kinng.cpp
qa/tests/pcbnew/: CMakeLists.txt  test_board_stackup_serialization.cpp  test_history_autosave.cpp  test_zone.cpp
tools/: bootstrap-kichad-appimage-ubuntu.sh  bootstrap-kichad-ubuntu.sh  build-kichad-appimage.sh  build-kichad.sh  check-codex-app-server.sh  check-kichad-libraries.sh  fetch-codex-standalone.sh  fetch-kicad-libraries.sh  generate-codex-protocol-schema.sh  install-kichad-libraries.sh  kichad-local-launcher.sh  package-kichad-appimage.sh  run-kichad.sh  smoke-codex-app-server-protocol.sh  smoke-kichad-fabrication-component.sh  smoke-kichad-fabrication.sh  smoke-kichad-kds-apply.sh  smoke-kichad-live-ipc.sh  smoke-kichad-stepper-reference.sh
tools/appimage/: kicad-appimage-ubuntu-24.04.diff
(+3 files in other folders)
